# F1_Sim

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: c-cpp_and_CMake.yml
source_code/: Car.cpp  Car.h  Car_Direction.h  Car_State.h  Car_Status.h  Car_direction.h  Pitstop_Status.h  Pitstop_Status.hpp  Random.cpp  Random.h  Track.h  User_Interface.cpp  User_Interface.h  main.cpp
